k8s/kustomize/api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type:  ClusterIP
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
