k8s/kustomize/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/graphql"
        backend:
          service:
            name: crud-api
            port:
              number: 5000
